[gd_scene load_steps=19 format=4 uid="uid://ts7mgqn2qm7c"]

[ext_resource type="Script" path="res://world.gd" id="1_mdy1h"]
[ext_resource type="Texture2D" uid="uid://cfu4d8j7tdguj" path="res://aaain.png" id="2_665x3"]
[ext_resource type="Texture2D" uid="uid://dn38mj6qf2rtm" path="res://dddeng.png" id="3_c5cdw"]
[ext_resource type="AudioStream" uid="uid://btgfu52wxijqs" path="res://优美的英语allin.mp3" id="4_vj82m"]
[ext_resource type="AudioStream" uid="uid://bsw8dpgalj6gp" path="res://春日影.mp3" id="4_wpy0u"]
[ext_resource type="AudioStream" uid="uid://wcrrf877ifus" path="res://国服韩信.mp3" id="6_cxoet"]
[ext_resource type="Texture2D" uid="uid://pjobllq6i2kt" path="res://Spritesheet/UIpackSheet_magenta.png" id="7_yxvpc"]
[ext_resource type="Texture2D" uid="uid://dbib3n33jghtm" path="res://Spritesheet/roitReal.png" id="8_qo85q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bkxir"]
radius = 36.0
height = 112.0

[sub_resource type="Animation" id="Animation_nkfxb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_0ejmc"]
resource_name = "stay"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1.4, 1.4), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3tiia"]
_data = {
"RESET": SubResource("Animation_nkfxb"),
"stay": SubResource("Animation_0ejmc")
}

[sub_resource type="Animation" id="Animation_1toca"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rxksa"]
resource_name = "eee"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(90, 0), Vector2(270, 0), Vector2(360, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ah5sl"]
resource_name = "stay"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2vkk"]
_data = {
"RESET": SubResource("Animation_1toca"),
"attack": SubResource("Animation_rxksa"),
"stay": SubResource("Animation_ah5sl")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ccjgp"]
texture = ExtResource("7_yxvpc")
separation = Vector2i(2, 2)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
32:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
32:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
31:18/0 = 0
32:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
32:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
31:20/0 = 0
32:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
31:21/0 = 0
32:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
30:22/0 = 0
31:22/0 = 0
32:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
25:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
30:23/0 = 0
31:23/0 = 0
32:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
22:24/0 = 0
23:24/0 = 0
24:24/0 = 0
25:24/0 = 0
26:24/0 = 0
27:24/0 = 0
28:24/0 = 0
29:24/0 = 0
30:24/0 = 0
31:24/0 = 0
32:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
23:25/0 = 0
24:25/0 = 0
25:25/0 = 0
26:25/0 = 0
27:25/0 = 0
28:25/0 = 0
29:25/0 = 0
30:25/0 = 0
31:25/0 = 0
32:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
21:26/0 = 0
22:26/0 = 0
23:26/0 = 0
24:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
28:26/0 = 0
29:26/0 = 0
30:26/0 = 0
31:26/0 = 0
32:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
4:27/0 = 0
5:27/0 = 0
6:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
10:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
15:27/0 = 0
16:27/0 = 0
17:27/0 = 0
18:27/0 = 0
19:27/0 = 0
20:27/0 = 0
21:27/0 = 0
22:27/0 = 0
23:27/0 = 0
24:27/0 = 0
25:27/0 = 0
26:27/0 = 0
27:27/0 = 0
28:27/0 = 0
29:27/0 = 0
30:27/0 = 0
31:27/0 = 0
32:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
10:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
18:28/0 = 0
19:28/0 = 0
20:28/0 = 0
21:28/0 = 0
22:28/0 = 0
23:28/0 = 0
24:28/0 = 0
25:28/0 = 0
26:28/0 = 0
27:28/0 = 0
28:28/0 = 0
29:28/0 = 0
30:28/0 = 0
31:28/0 = 0
32:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
5:29/0 = 0
6:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
10:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
14:29/0 = 0
15:29/0 = 0
16:29/0 = 0
17:29/0 = 0
18:29/0 = 0
19:29/0 = 0
20:29/0 = 0
21:29/0 = 0
22:29/0 = 0
23:29/0 = 0
24:29/0 = 0
25:29/0 = 0
26:29/0 = 0
27:29/0 = 0
28:29/0 = 0
29:29/0 = 0
30:29/0 = 0
31:29/0 = 0
32:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
10:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
14:30/0 = 0
15:30/0 = 0
16:30/0 = 0
17:30/0 = 0
18:30/0 = 0
19:30/0 = 0
20:30/0 = 0
21:30/0 = 0
22:30/0 = 0
23:30/0 = 0
24:30/0 = 0
25:30/0 = 0
26:30/0 = 0
27:30/0 = 0
28:30/0 = 0
29:30/0 = 0
30:30/0 = 0
31:30/0 = 0
32:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
4:31/0 = 0
5:31/0 = 0
6:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
10:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
15:31/0 = 0
16:31/0 = 0
17:31/0 = 0
18:31/0 = 0
19:31/0 = 0
20:31/0 = 0
21:31/0 = 0
22:31/0 = 0
23:31/0 = 0
24:31/0 = 0
25:31/0 = 0
26:31/0 = 0
27:31/0 = 0
28:31/0 = 0
29:31/0 = 0
30:31/0 = 0
31:31/0 = 0
32:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
10:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
14:32/0 = 0
15:32/0 = 0
16:32/0 = 0
17:32/0 = 0
18:32/0 = 0
19:32/0 = 0
20:32/0 = 0
21:32/0 = 0
22:32/0 = 0
23:32/0 = 0
24:32/0 = 0
25:32/0 = 0
26:32/0 = 0
27:32/0 = 0
28:32/0 = 0
29:32/0 = 0
30:32/0 = 0
31:32/0 = 0
32:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
4:33/0 = 0
5:33/0 = 0
6:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
10:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
14:33/0 = 0
15:33/0 = 0
16:33/0 = 0
17:33/0 = 0
18:33/0 = 0
19:33/0 = 0
20:33/0 = 0
21:33/0 = 0
22:33/0 = 0
23:33/0 = 0
24:33/0 = 0
25:33/0 = 0
26:33/0 = 0
27:33/0 = 0
28:33/0 = 0
29:33/0 = 0
30:33/0 = 0
31:33/0 = 0
32:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
10:34/0 = 0
11:34/0 = 0
12:34/0 = 0
13:34/0 = 0
14:34/0 = 0
15:34/0 = 0
16:34/0 = 0
17:34/0 = 0
18:34/0 = 0
19:34/0 = 0
20:34/0 = 0
21:34/0 = 0
22:34/0 = 0
23:34/0 = 0
24:34/0 = 0
25:34/0 = 0
26:34/0 = 0
27:34/0 = 0
28:34/0 = 0
29:34/0 = 0
30:34/0 = 0
31:34/0 = 0
32:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
4:35/0 = 0
5:35/0 = 0
6:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
10:35/0 = 0
11:35/0 = 0
12:35/0 = 0
13:35/0 = 0
14:35/0 = 0
15:35/0 = 0
16:35/0 = 0
17:35/0 = 0
18:35/0 = 0
19:35/0 = 0
20:35/0 = 0
21:35/0 = 0
22:35/0 = 0
23:35/0 = 0
24:35/0 = 0
25:35/0 = 0
26:35/0 = 0
27:35/0 = 0
28:35/0 = 0
29:35/0 = 0
30:35/0 = 0
31:35/0 = 0
32:35/0 = 0
0:36/0 = 0
1:36/0 = 0
2:36/0 = 0
3:36/0 = 0
4:36/0 = 0
5:36/0 = 0
6:36/0 = 0
7:36/0 = 0
8:36/0 = 0
9:36/0 = 0
10:36/0 = 0
11:36/0 = 0
12:36/0 = 0
13:36/0 = 0
14:36/0 = 0
15:36/0 = 0
16:36/0 = 0
17:36/0 = 0
18:36/0 = 0
19:36/0 = 0
20:36/0 = 0
21:36/0 = 0
22:36/0 = 0
23:36/0 = 0
24:36/0 = 0
25:36/0 = 0
26:36/0 = 0
27:36/0 = 0
28:36/0 = 0
29:36/0 = 0
30:36/0 = 0
31:36/0 = 0
32:36/0 = 0

[sub_resource type="TileSet" id="TileSet_8dl1g"]
sources/0 = SubResource("TileSetAtlasSource_ccjgp")

[node name="World" type="Node2D"]
script = ExtResource("1_mdy1h")

[node name="MainTextEdit" type="TextEdit" parent="."]
offset_left = 3.0
offset_top = 264.0
offset_right = 1153.0
offset_bottom = 574.0
text = "ee 

asd 
asd

sad "

[node name="attack" type="Button" parent="."]
offset_left = 218.0
offset_top = 584.0
offset_right = 471.0
offset_bottom = 637.0
text = "攻击"

[node name="skill" type="Button" parent="."]
offset_left = 546.0
offset_top = 584.0
offset_right = 772.0
offset_bottom = 633.0
text = "技能"

[node name="Monster" type="Area2D" parent="."]
position = Vector2(885, 163)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Monster"]
shape = SubResource("CapsuleShape2D_bkxir")

[node name="Sprite2D" type="Sprite2D" parent="Monster"]
texture = ExtResource("2_665x3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Monster"]
libraries = {
"": SubResource("AnimationLibrary_3tiia")
}

[node name="Player" type="Area2D" parent="."]
position = Vector2(279, 161)
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_j2vkk")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_bkxir")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("3_c5cdw")

[node name="MonsterTime" type="Timer" parent="."]
wait_time = 1.2

[node name="PlayerMsg" type="Node" parent="."]

[node name="PlayerHealthLabel" type="Label" parent="PlayerMsg"]
offset_left = 131.0
offset_top = 12.0
offset_right = 211.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 30
text = "你
"

[node name="MP" type="Node" parent="PlayerMsg"]

[node name="MpBar" type="ProgressBar" parent="PlayerMsg/MP"]
offset_left = 208.0
offset_top = 34.0
offset_right = 435.0
offset_bottom = 61.0

[node name="MpLabel" type="Label" parent="PlayerMsg/MP"]
offset_left = 181.0
offset_top = 31.0
offset_right = 219.0
offset_bottom = 59.0
theme_override_font_sizes/font_size = 20
text = "MP"

[node name="HP" type="Node" parent="PlayerMsg"]

[node name="HpBar" type="ProgressBar" parent="PlayerMsg/HP"]
offset_left = 207.0
offset_top = 3.0
offset_right = 434.0
offset_bottom = 30.0

[node name="HpLabel" type="Label" parent="PlayerMsg/HP"]
offset_left = 180.0
offset_top = 1.0
offset_right = 218.0
offset_bottom = 29.0
theme_override_font_sizes/font_size = 20
text = "HP"

[node name="MonsterMsg" type="Node" parent="."]

[node name="MonsterHealthLabel" type="Label" parent="MonsterMsg"]
offset_left = 621.0
offset_top = 21.0
offset_right = 771.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 30
text = "软萌奶奶兔
"

[node name="MP" type="Node" parent="MonsterMsg"]

[node name="MpBar" type="ProgressBar" parent="MonsterMsg/MP"]
offset_left = 827.0
offset_top = 40.0
offset_right = 1054.0
offset_bottom = 67.0

[node name="MpLabel" type="Label" parent="MonsterMsg/MP"]
offset_left = 788.0
offset_top = 42.0
offset_right = 826.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 20
text = "MP"

[node name="HP" type="Node" parent="MonsterMsg"]

[node name="HpBar" type="ProgressBar" parent="MonsterMsg/HP"]
offset_left = 830.0
offset_top = 8.0
offset_right = 1057.0
offset_bottom = 35.0

[node name="HpLabel" type="Label" parent="MonsterMsg/HP"]
offset_left = 787.0
offset_top = 10.0
offset_right = 824.0
offset_bottom = 34.0
theme_override_font_sizes/font_size = 20
text = "HP"

[node name="Music" type="Node" parent="."]

[node name="MonsterAttack" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("4_vj82m")
volume_db = 12.0

[node name="BackGroundMusic" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("4_wpy0u")
pitch_scale = 0.49

[node name="PlayerAttack" type="AudioStreamPlayer2D" parent="Music"]
stream = ExtResource("6_cxoet")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAcAAoAAAAXABgAAAAdAAoAAAAXABgAAAAeAAoAAAAXABgAAAAfAAoAAAAXABgAAAAgAAoAAAAXABgAAAAhAAoAAAAXABgAAAAiAAoAAAAXABgAAAAjAAoAAAAXABgAAAAkAAoAAAAXABgAAAAlAAoAAAAXABgAAAAmAAoAAAAXABgAAAAnAAoAAAAXABgAAAAoAAoAAAAXABgAAAApAAoAAAAXABgAAAAqAAoAAAAXABgAAAAAAAAAAAAZAAQAAAAAAAEAAAAZAAQAAAAAAAIAAAAZAAQAAAAAAAMAAAAZAAQAAAAAAAQAAAAZAAQAAAAAAAUAAAAZAAQAAAAAAAYAAAAZAAQAAAAAAAcAAAAZAAQAAAAAAAgAAAAZAAQAAAAAAAkAAAAZAAQAAAAAAAoAAAAZAAQAAAAAAAsAAAAZAAQAAAAAAAwAAAAZAAQAAAAAAA0AAAAZAAQAAAABAAAAAAAZAAQAAAABAAEAAAAZAAQAAAABAAIAAAAZAAQAAAABAAMAAAAZAAQAAAABAAQAAAAZAAQAAAABAAUAAAAZAAQAAAABAAYAAAAZAAQAAAABAAcAAAAZAAQAAAABAAgAAAAZAAQAAAABAAkAAAAZAAQAAAABAAoAAAAZAAQAAAABAAsAAAAZAAQAAAABAAwAAAAZAAQAAAABAA0AAAAZAAQAAAACAAAAAAAZAAQAAAACAAEAAAAZAAQAAAACAAIAAAAZAAQAAAACAAMAAAAZAAQAAAACAAQAAAAZAAQAAAACAAUAAAAZAAQAAAACAAYAAAAZAAQAAAACAAcAAAAZAAQAAAACAAgAAAAZAAQAAAACAAkAAAAZAAQAAAACAAoAAAAZAAQAAAACAAsAAAAZAAQAAAACAAwAAAAZAAQAAAACAA0AAAAZAAQAAAADAAAAAAAZAAQAAAADAAEAAAAZAAQAAAADAAIAAAAZAAQAAAADAAMAAAAZAAQAAAADAAQAAAAZAAQAAAADAAUAAAAZAAQAAAADAAYAAAAZAAQAAAADAAcAAAAZAAQAAAADAAgAAAAZAAQAAAADAAkAAAAZAAQAAAADAAoAAAAZAAQAAAADAAsAAAAZAAQAAAADAAwAAAAZAAQAAAADAA0AAAAZAAQAAAAEAAAAAAAZAAQAAAAEAAEAAAAZAAQAAAAEAAIAAAAZAAQAAAAEAAMAAAAZAAQAAAAEAAQAAAAZAAQAAAAEAAUAAAAZAAQAAAAEAAYAAAAZAAQAAAAEAAcAAAAZAAQAAAAEAAgAAAAZAAQAAAAEAAkAAAAZAAQAAAAEAAoAAAAZAAQAAAAEAAsAAAAZAAQAAAAEAAwAAAAZAAQAAAAEAA0AAAAZAAQAAAAFAAAAAAAZAAQAAAAFAAEAAAAZAAQAAAAFAAIAAAAZAAQAAAAFAAMAAAAZAAQAAAAFAAQAAAAZAAQAAAAFAAUAAAAZAAQAAAAFAAYAAAAZAAQAAAAFAAcAAAAZAAQAAAAFAAgAAAAZAAQAAAAFAAkAAAAZAAQAAAAFAAoAAAAZAAQAAAAFAAsAAAAZAAQAAAAFAAwAAAAZAAQAAAAFAA0AAAAZAAQAAAAGAAAAAAAZAAQAAAAGAAEAAAAZAAQAAAAGAAIAAAAZAAQAAAAGAAMAAAAZAAQAAAAGAAQAAAAZAAQAAAAGAAUAAAAZAAQAAAAGAAYAAAAZAAQAAAAGAAcAAAAZAAQAAAAGAAgAAAAZAAQAAAAGAAkAAAAZAAQAAAAGAAoAAAAZAAQAAAAGAAsAAAAZAAQAAAAGAAwAAAAZAAQAAAAGAA0AAAAZAAQAAAAHAAAAAAAZAAQAAAAHAAEAAAAZAAQAAAAHAAIAAAAZAAQAAAAHAAMAAAAZAAQAAAAHAAQAAAAZAAQAAAAHAAUAAAAZAAQAAAAHAAYAAAAZAAQAAAAHAAcAAAAZAAQAAAAHAAgAAAAZAAQAAAAHAAkAAAAZAAQAAAAHAAoAAAAZAAQAAAAHAAsAAAAZAAQAAAAHAAwAAAAZAAQAAAAHAA0AAAAZAAQAAABHABAAAAAZAAQAAABGABAAAAAZAAQAAABGAA8AAAAZAAQAAABFAA8AAAAZAAQAAABFAA4AAAAZAAQAAABEAA4AAAAZAAQAAABEAA0AAAAZAAQAAABDAA0AAAAZAAQAAABDAAwAAAAZAAQAAABDAAsAAAAZAAQAAABCAAsAAAAZAAQAAABCAAoAAAAZAAQAAABCAAkAAAAZAAQAAABBAAkAAAAZAAQAAABAAAkAAAAZAAQAAABAAAgAAAAZAAQAAAA/AAgAAAAZAAQAAAA/AAcAAAAZAAQAAAA/AAYAAAAZAAQAAAA+AAYAAAAZAAQAAAA+AAUAAAAZAAQAAAA+AAQAAAAZAAQAAAA/AAUAAAAZAAQAAABAAAUAAAAZAAQAAABBAAUAAAAZAAQAAABCAAUAAAAZAAQAAABDAAUAAAAZAAQAAABEAAUAAAAZAAQAAABFAAUAAAAZAAQAAABGAAUAAAAZAAQAAABHAAUAAAAZAAQAAABHAAYAAAAZAAQAAABHAAcAAAAZAAQAAABHAAgAAAAZAAQAAABHAAkAAAAZAAQAAABGAAkAAAAZAAQAAABGAAoAAAAZAAQAAABGAAsAAAAZAAQAAABGAAwAAAAZAAQAAABGAA0AAAAZAAQAAABGAA4AAAAZAAQAAABEAA8AAAAZAAQAAABDAA8AAAAZAAQAAABCAA8AAAAZAAQAAABBAA8AAAAZAAQAAABAAA8AAAAZAAQAAAA/AA8AAAAZAAQAAAA+AA8AAAAZAAQAAAA+AA4AAAAZAAQAAAA+AA0AAAAZAAQAAAA+AAwAAAAZAAQAAAA+AAsAAAAZAAQAAAA+AAoAAAAZAAQAAAA+AAkAAAAZAAQAAAA+AAgAAAAZAAQAAAA+AAcAAAAZAAQAAAAIAP//AAAcABAAAAAJAP//AAAcABAAAAAKAP//AAAcABAAAAALAP//AAAcABAAAAAMAP//AAAcABAAAAANAP//AAAcABAAAAAOAP//AAAcABAAAAAPAP//AAAcABAAAAAQAP//AAAcABAAAAARAP//AAAcABAAAAASAP//AAAcABAAAAATAP//AAAcABAAAAAUAP//AAAcABAAAAAVAP//AAAcABAAAAAWAP//AAAcABAAAAAXAP//AAAcABAAAAAYAP//AAAcABAAAAAZAP//AAAcABAAAAAaAP//AAAcABAAAAAbAP//AAAcABAAAAAcAP//AAAcABAAAAAdAP//AAAcABAAAAAeAP//AAAcABAAAAAfAP//AAAcABAAAAAgAP//AAAcABAAAAAhAP//AAAcABAAAAAiAP//AAAcABAAAAAjAP//AAAcABAAAAAkAP//AAAcABAAAAAlAP//AAAcABAAAAAmAP//AAAcABAAAAAnAP//AAAcABAAAAAoAP//AAAcABAAAAApAP//AAAcABAAAAAqAP//AAAcABAAAAArAP//AAAcABAAAAAsAP//AAAcABAAAAAtAP//AAAcABAAAAAuAP//AAAcABAAAAAvAP//AAAcABAAAAAwAP//AAAcABAAAAAxAP//AAAcABAAAAAxAP7/AAAcABAAAAAyAP7/AAAcABAAAAAzAP7/AAAcABAAAAA0AP7/AAAcABAAAAA1AP7/AAAcABAAAAA2AP7/AAAcABAAAAA2AP//AAAcABAAAAA3AP//AAAcABAAAAA4AP//AAAcABAAAAA5AP//AAAcABAAAAA6AP//AAAcABAAAAA7AP//AAAcABAAAAA8AP//AAAcABAAAAA9AP//AAAcABAAAAA+AP//AAAcABAAAAA/AP//AAAcABAAAAAaAAQAAAAcABAAAAAbAAQAAAAcABAAAAAcAAQAAAAcABAAAAAcAAMAAAAcABAAAAAdAAMAAAAcABAAAAAdAAIAAAAcABAAAAAdAAEAAAAcABAAAAAdAAAAAAAcABAAAAAeAAAAAAAcABAAAAAfAAAAAAAcABAAAAAgAAAAAAAcABAAAAAhAAAAAAAcABAAAAAiAAAAAAAcABAAAAAjAAAAAAAcABAAAAAkAAAAAAAcABAAAAAlAAAAAAAcABAAAAAlAAEAAAAcABAAAAAlAAIAAAAcABAAAAAlAAMAAAAcABAAAAAmAAMAAAAcABAAAAAmAAQAAAAcABAAAAAnAAQAAAAcABAAAAAoAAQAAAAcABAAAAApAAQAAAAcABAAAAAqAAQAAAAcABAAAAArAAQAAAAcABAAAAAsAAQAAAAcABAAAAAtAAQAAAAcABAAAAAuAAQAAAAcABAAAAAYAAsAAAAPABQAAAAZAAsAAAAPABQAAAAaAAsAAAAPABQAAAAZAAwAAAAPABQAAAAZAA0AAAAPABQAAAAZAA4AAAAPABQAAAAZAA8AAAAPABQAAAAZABAAAAAPABQAAAAYABAAAAAPABQAAAAaABAAAAAPABQAAAAbAA0AAAAPABQAAAAcAA0AAAAPABQAAAAcAAsAAAAPABQAAAAcAAwAAAAPABQAAAAcAA4AAAAPABQAAAAcAA8AAAAPABQAAAAdAA8AAAAPABQAAAAdAA4AAAAPABQAAAAdAAwAAAAPABQAAAAeAAsAAAAPABQAAAAfAAsAAAAPABQAAAAfAAwAAAAPABQAAAAiAAsAAAAPABQAAAAhAAsAAAAPABQAAAAhAAwAAAAPABQAAAAgAAwAAAAPABQAAAAgAA0AAAAPABQAAAAhAA0AAAAPABQAAAAiAA0AAAAPABQAAAAjAA0AAAAPABQAAAAjAA4AAAAPABQAAAAjAA8AAAAPABQAAAAiAA8AAAAPABQAAAAhAA8AAAAPABQAAAAhABAAAAAPABQAAAAgAA8AAAAPABQAAAAjAAsAAAAPABQAAAAmAA4AAAAPABQAAAAnAA0AAAAPABQAAAAoAA4AAAAPABQAAAApAA0AAAAPABQAAAAqAA4AAAAPABQAAAArAAwAAAAPABQAAAAsAA0AAAAPABQAAAAtAAwAAAAPABQAAAAtAA0AAAAPABQAAAAsAA4AAAAPABQAAAAsAA8AAAAPABQAAAArABAAAAAPABQAAAAqAA8AAAAPABQAAAAvAAwAAAAPABQAAAAvAA0AAAAPABQAAAAuAA0AAAAPABQAAAAuAA4AAAAPABQAAAAuAA8AAAAPABQAAAAvAA8AAAAPABQAAAAvAA4AAAAPABQAAAAwAA4AAAAPABQAAAAwAA8AAAAPABQAAAAyAA4AAAAPABQAAAAyAA8AAAAPABQAAAAyABAAAAAPABQAAAAzABAAAAAPABQAAAA0ABAAAAAPABQAAAA1ABAAAAAPABQAAAA2ABAAAAAPABQAAAA2AA8AAAAPABQAAAA2AA4AAAAPABQAAAA1AA4AAAAPABQAAAA1AA0AAAAPABQAAAA0AA0AAAAPABQAAAAzAA0AAAAPABQAAAAzAA4AAAAPABQAAAA=")
tile_set = SubResource("TileSet_8dl1g")

[node name="Effects" type="Node" parent="."]

[node name="AttackEffect" type="Sprite2D" parent="Effects"]
position = Vector2(92, 153)
scale = Vector2(0.296414, 0.303899)
texture = ExtResource("8_qo85q")

[node name="Trail" type="Line2D" parent="Effects"]

[connection signal="pressed" from="attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="skill" to="." method="_on_skill_pressed"]
[connection signal="timeout" from="MonsterTime" to="." method="_on_monster_time_timeout"]
